# Walden

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yaml  journal.py  journal_cli.py  pyproject.toml  req.txt  setup.py  walden
compiler/: __init__.py  build.py  log_generator.py
journal/: __init__.py  create_journal.py  edit_journal.py
resources/: Makefile_template  compile_months.sh
resources/aux/: newmonth.tex  newyear.tex  title.tex
tests/: support.py  test_api.py  test_build.py  test_data_classes.py  test_list.py
walden/: __main__.py  _build.py  _build_log.py  _config.py  _create.py  _data_classes.py  _delete.py  _edit.py  _errors.py  _list.py  _utils.py  cli.py  cli_old.py  cli_options.py  main.py
walden/api/: _access_api.py  _fs_api.py  api.py
walden/compiler/: __init__.py  build.py  log_generator.py
walden/core/: __init__.py  base_journal.py  basic_journal.py  create_journal.py  journal_actions.py
walden/journal/: __init__.py  create_journal.py  edit_journal.py
walden/utils/: __init__.py  constants.py  helpers.py  pickler.py
