[tool.poetry]
name = "walden"
version = "0.0.73"
description = "A .tex journal system"
authors = ["Aravind Koneru <aravind.b.koneru@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/aravindkoneru/walden"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.poetry.scripts]
"walden" = "walden.main:main"

[tool.poetry.dependencies]
python = "^3.8"
toml = "^0.10.2"


[tool.poetry.dev-dependencies]
black = "*"
pytest = "^6.1.2"
isort = "^5.9.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


