[tool.poetry]
name = "walden"
version = "0.0.8"
description = "A .tex journal system"
authors = ["Aravind Koneru <aravind.b.koneru@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/aravindkoneru/walden"
repository = "https://github.com/aravindkoneru/walden"
include = [
    "LICENSE"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.poetry.scripts]
"walden" = "walden.main:main"

[tool.poetry.dependencies]
python = "^3.8"
toml = "^0.10.2"
colorama = "^0.4.4"

[tool.poetry.group.dev.dependencies]
pytest-cov = "^4.0.0"
isort = "^5.13.2"
black = "*"
pytest = "^6.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


